if(COMPILE_MATLAB_BINDING)
  message(STATUS "Compiling matlab binding (1258)")
  message(STATUS "Matlab include path is:")
  message(STATUS "  ${BRAHMS_MATLAB_INCLUDES}")
  message(STATUS "  (You can change this path in BrahmsLibFind.cmake)")
  include_directories (${BRAHMS_MATLAB_INCLUDES})
  add_library (binding_1258 SHARED matlab.cpp)
else()
  message(STATUS "Omitting matlab binding (1258)")
endif(COMPILE_MATLAB_BINDING)
