if(COMPILE_MATLAB_BINDING)
  message(STATUS "Compiling matlab binding (1258)")
  message(STATUS "Matlab include path is:")
  message(STATUS "  ${BRAHMS_MATLAB_INCLUDES}")
  message(STATUS "  (You can change this path in BrahmsLibFind.cmake)")
  include_directories (${BRAHMS_MATLAB_INCLUDES})
  add_library (brahms-1258 SHARED matlab.cpp)
  install(TARGETS brahms-1258 DESTINATION lib/brahms/bindings)
else()
  message(STATUS "Omitting matlab binding (1258)")
  message(STATUS "  (Include matlab binding with `cmake -DCOMPILE_MATLAB_BINDING=ON`)")
endif(COMPILE_MATLAB_BINDING)
