if(COMPILE_PYTHON_BINDING)
  message(STATUS "Compiling python binding (1262)")
  # See BrahmsLibFind.cmake which gets these include paths:
  include_directories(${BRAHMS_NUMPY_INCLUDES} ${BRAHMS_PYTHON_INCLUDES})
  add_library(brahms-1262 SHARED python.cpp)
  if(APPLE)
    target_link_libraries (brahms-1262 brahms-engine ${PYTHON_LIBRARIES})
  endif(APPLE)
  target_link_libraries (brahms-1262 ${PYTHON_LIBRARIES})
  install(TARGETS brahms-1262 DESTINATION ${LIB_INSTALL_PATH}/bindings/component/1262)
else()
  message(STATUS "Omitting python binding (1262)")
  message(STATUS "  (Include python binding with `cmake -DCOMPILE_PYTHON_BINDING=ON`)")
endif(COMPILE_PYTHON_BINDING)

